# ezndi

./: README.md  pyproject.toml
example/: send_rand.py
src/ezndi/: __init__.py  api.py
